--- a/bramble/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/bramble/overlay/frameworks/base/core/res/res/values/config.xml
@@ -696,4 +696,6 @@
     <!-- Height of the status bar -->
     <dimen name="status_bar_height_portrait">28dp</dimen>
 
+    <!-- Whether or not wcg mode should be enabled on this device -->
+    <bool name="config_enableWcgMode">true</bool>
 </resources>
