Fix NPE in ScreenDecorations CameraTransitionCallback
Comment config_protectedCameraId from overlay config temporary

Bug: 151706640
Test: manual
Test: atest SystemUITests
Change-Id: I50ecddab32ea68c3465ab77dd08259fff2a7d49e

--- a/bramble/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/bramble/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -83,7 +83,8 @@
     </string>
 
     <!-- Camera 1 is the front camera on bramble -->
-    <string translatable="false" name="config_protectedCameraId">1</string>
+    <!-- TODO b/151706640 uncomment after protectedCameraId mechanism is ready in rvc-->
+    <!--<string translatable="false" name="config_protectedCameraId">1</string>-->
 
     <bool name="config_enableDisplayCutoutProtection">true</bool>
 </resources>
