Revert "Fix NPE in ScreenDecorations CameraTransitionCallback"
This reverts commit 467ee8a7cca4dd1db0b7d0c699e63ae9dff04e54.

Reason for revert: CameraAvailabilityListener NPE solved, re-enable config_protectedCameraId for Bramble rvc

Fixes: 151706640
Change-Id: Ib4e8ada1a00427e8b66121d23aa2045979103d18

--- a/bramble/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/bramble/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -83,8 +83,7 @@
     </string>
 
     <!-- Camera 1 is the front camera on bramble -->
-    <!-- TODO b/151706640 uncomment after protectedCameraId mechanism is ready in rvc-->
-    <!--<string translatable="false" name="config_protectedCameraId">1</string>-->
+    <string translatable="false" name="config_protectedCameraId">1</string>
 
     <bool name="config_enableDisplayCutoutProtection">true</bool>
 </resources>
