Add 5G RAT for bramble and redfin
Bug: 151964705
Fix: 151964705
Test: Build
Change-Id: I6b8fff1d532caa60465ba526522164ebea25c557

--- a/bramble/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/bramble/overlay/frameworks/base/core/res/res/values/config.xml
@@ -134,6 +134,20 @@
      -->
     <bool name="config_fillMainBuiltInDisplayCutout">true</bool>
 
+    <!-- An array of device capabilities defined by GSMA SGP.22 v2.2.2, and their corresponding major
+     version. -->
+     <string-array translatable="false" name="config_telephonyEuiccDeviceCapabilities">
+          <item>"gsm,9"</item>
+          <item>"utran,9"</item>
+          <item>"cdma1x,1"</item>
+          <item>"hrpd,3"</item>
+          <item>"ehrpd,12"</item>
+          <item>"eutran,15"</item>
+          <item>"nrepc,15"</item>
+          <item>"nr5gc,15"</item>
+          <item>"eutran5gc,15"</item>
+     </string-array>
+
     <!-- Display cutout configuration -->
     <string translatable="false" name="config_mainBuiltInDisplayCutout">
       <!-- The hole punch dimensions are this:
