--- a/bramble/overlay/packages/apps/Nfc/res/values/config.xml
+++ b/bramble/overlay/packages/apps/Nfc/res/values/config.xml
@@ -19,6 +19,9 @@
   <integer name="unknown_tag_polling_delay">2000</integer>
   <string name="antenna_blocked_alert_link" translatable="false">https://support.google.com/pixelphone?p=nfc_tag_notification</string>
   <string-array name="config_skuSupportsSecureNfc" translatable="false">
+    <item>G025E</item>
+    <item>G025I</item>
     <item>G025H</item>
+    <item>G6QU3</item>
   </string-array>
 </resources>
