--- a/bramble/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/bramble/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -37,4 +37,10 @@
     <dimen name="config_rounded_mask_size_top">136px</dimen>
     <dimen name="config_rounded_mask_size_bottom">136px</dimen>
 
+    <!-- Location on the screen of the center of the physical power button. -->
+    <dimen name="physical_power_button_center_screen_location_y">575px</dimen>
+
+    <!-- Location on the screen of the center of the physical volume up/down buttons. -->
+    <dimen name="physical_volume_up_button_center_screen_location_y">915px</dimen>
+    <dimen name="physical_volume_down_button_center_screen_location_y">1065px</dimen>
 </resources>
