Fixed status bar glitch for apps that access internal resource dimen
Bring back old usage of status_bar_height, status_bar_height_portrait,
and status_bar_height_landscape by set the size containing cutout size.

Bug: 216782082
Test: make
Change-Id: I50ce2564626a564bf69d185cd36333dfbad27ecd

--- a/bramble/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/bramble/overlay/frameworks/base/core/res/res/values/config.xml
@@ -231,7 +231,9 @@
     <!-- Height of the status bar.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
          -->
-    <dimen name="status_bar_height">28dp</dimen>
+    <dimen name="status_bar_height_default">28dp</dimen>
+    <dimen name="status_bar_height_portrait">145px</dimen>
+    <dimen name="status_bar_height_landscape">28dp</dimen>
 
     <!-- List of biometric sensors on the device, in decreasing strength. Consumed by AuthService
      when registering authenticators with BiometricService. Format must be ID:Modality:Strength,
