[NFC] Set tag_intent_app_pref_supported
Bug: 244272155
Test: atest android.permission.cts.NfcPermissionTest
Test: atest NfcFeatureFlagTest
Change-Id: Ie1b467c6a7deb6904e2f65dbaaf045385f9b01b3

--- a/bramble/overlay/packages/apps/Nfc/res/values/config.xml
+++ b/bramble/overlay/packages/apps/Nfc/res/values/config.xml
@@ -24,4 +24,5 @@
     <item>G025H</item>
     <item>G6QU3</item>
   </string-array>
+  <bool name="tag_intent_app_pref_supported">true</bool>
 </resources>
